<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/date_picker_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/date_picker_text_light"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="@color/date_picker_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/date_picker_divider" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/original_time"
                android:textColor="@color/selected_time_text"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="至"
                android:textColor="@color/select_title_text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/endTimerTip"
                android:textColor="@color/un_selected_time_text"
                android:textSize="15sp" />

        </LinearLayout>
        <View
            android:id="@+id/startView"
            android:layout_width="160dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="26dp"
            android:background="@color/selected_time_text" />
        <View
            android:id="@+id/endView"
            android:layout_width="160dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="200dp"
            android:background="@color/selected_time_text" />


        <View
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/startView"
            android:background="@color/select_title_text" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/date_picker_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="15dp">



        <com.jfq.xlstef.jfqui.OrderFragment.Util.PickerView
            android:id="@+id/dpv_year"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <com.jfq.xlstef.jfqui.OrderFragment.Util.PickerView
            android:id="@+id/dpv_month"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <com.jfq.xlstef.jfqui.OrderFragment.Util.PickerView
            android:id="@+id/dpv_day"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_day_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <com.jfq.xlstef.jfqui.OrderFragment.Util.PickerView
            android:id="@+id/dpv_hour"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_hour_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />

        <com.jfq.xlstef.jfqui.OrderFragment.Util.PickerView
            android:id="@+id/dpv_minute"
            android:layout_width="0dp"
            android:layout_height="@dimen/picker_view_height"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/tv_minute_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="@color/date_picker_text_dark"
            android:textSize="@dimen/date_unit_text_size" />


    </LinearLayout>
    <TextView
        android:id="@+id/serachError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginTop="15dp"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:text="目前查询时间不正确"/>



</LinearLayout>